[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "module_inheritance"
version = "0.5.42"
authors = [
  { name="Roman Zawada", email="zwadar@gmail.com" },
]
description = "Support for overriding modules the same way as subclassing works."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zwadar/module_inheritance"
"Bug Tracker" = "https://github.com/zwadar/module_inheritance/issues"